[gd_scene load_steps=17 format=2]

[ext_resource path="res://menus/BaseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/menus/RowFocusIndicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/menu_bg_fade.shader" type="Shader" id=3]
[ext_resource path="res://nodes/menus/AutoFocusConnector.gd" type="Script" id=4]
[ext_resource path="res://nodes/menus/ArrowOptionList.tscn" type="PackedScene" id=5]
[ext_resource path="res://menus/character_creation/GridRowLabel.gd" type="Script" id=6]
[ext_resource path="res://mods/cbpastes/menus/PasteExportMenu.gd" type="Script" id=7]
[ext_resource path="res://mods/cbpastes/menu_theme.tres" type="Theme" id=8]
[ext_resource path="res://ui/fonts/regular/regular_30.tres" type="DynamicFont" id=9]
[ext_resource path="res://menus/BackButtonPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://nodes/menus/InputMappedButton.gd" type="Script" id=11]
[ext_resource path="res://sfx/world/wired/success_chime.wav" type="AudioStream" id=12]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/progress = 1.0
shader_param/max_alpha = 1.0
shader_param/base_color = Color( 0.1686, 0.1098, 0.2235, 1 )
shader_param/hi_color = Color( 0.6706, 0.4588, 0.9098, 0.0625 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 16.0
content_margin_right = 16.0
bg_color = Color( 0.670588, 0.458824, 0.909804, 1 )
corner_radius_top_right = 128
corner_detail = 1
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 1
shadow_offset = Vector2( -16, 16 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 1
shadow_offset = Vector2( -16, 16 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="PasteExportMenu" instance=ExtResource( 1 )]
theme = ExtResource( 8 )
script = ExtResource( 7 )

[node name="Blur" parent="." index="0"]
material = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Scroller/OverscanMarginContainer" index="0"]
margin_left = 172.0
margin_top = 97.0
margin_right = 1748.0
margin_bottom = 983.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Scroller/OverscanMarginContainer/MarginContainer" index="0"]
margin_top = 15.0
margin_right = 1576.0
margin_bottom = 871.0
size_flags_vertical = 4
custom_constants/separation = 30

[node name="ProgressLabel" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2" index="0"]
margin_right = 1576.0
margin_bottom = 60.0
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2" index="1"]
margin_left = 479.0
margin_top = 90.0
margin_right = 1097.0
margin_bottom = 856.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer" index="0"]
margin_right = 618.0
margin_bottom = 60.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer" index="0"]
margin_left = 16.0
margin_right = 602.0
margin_bottom = 60.0
text = "CBPASTE_EXPORT_MENU_TITLE"
align = 1

[node name="PanelContainer2" type="PanelContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer" index="1"]
margin_top = 60.0
margin_right = 618.0
margin_bottom = 766.0
custom_styles/panel = SubResource( 3 )

[node name="RowFocusIndicator" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2" index="0" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 618.0
margin_bottom = 0.0
container_path = NodePath("../MarginContainer/VBoxContainer/InputContainer")

[node name="MarginContainer" type="MarginContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2" index="1"]
margin_right = 618.0
margin_bottom = 706.0
rect_clip_content = true
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer" index="0"]
margin_left = 16.0
margin_top = 8.0
margin_right = 602.0
margin_bottom = 690.0
rect_pivot_offset = Vector2( 1327.65, 14 )
custom_constants/separation = 32

[node name="InputContainer" type="GridContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer" index="0"]
margin_right = 586.0
margin_bottom = 440.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 2
script = ExtResource( 4 )
preserve_focus_index = true
initial_focus = NodePath("ExportTypeInput")
focus_on_hover = true

[node name="Label" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="0"]
margin_right = 438.0
margin_bottom = 60.0
hint_tooltip = "CBPASTE_EXPORT_HINT_TEAM"
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CBPASTE_EXPORT_MODE"
align = 2
script = ExtResource( 6 )

[node name="ExportTypeInput" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="1" instance=ExtResource( 5 )]
margin_left = 454.0
margin_right = 586.0
margin_bottom = 60.0
hint_tooltip = "CBPASTE_EXPORT_HINT_TEAM"
values = [ true, false ]
value_labels = [ "CBPASTE_EXPORT_MODE_TEAM", "CBPASTE_EXPORT_MODE_STORAGE" ]

[node name="Label2" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="2"]
margin_top = 76.0
margin_right = 438.0
margin_bottom = 136.0
hint_tooltip = "CBPASTE_EXPORT_HINT_FORMAT"
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CBPASTE_EXPORT_FORMATTING"
align = 2
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="FormattingInput" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="3" instance=ExtResource( 5 )]
margin_left = 454.0
margin_top = 76.0
margin_right = 586.0
margin_bottom = 136.0
hint_tooltip = "CBPASTE_EXPORT_HINT_FORMAT"
values = [ "plain", "markdown", "html", "bbcode" ]
value_labels = [ "CBPASTE_EXPORT_FORMATTING_PLAIN", "CBPASTE_EXPORT_FORMATTING_MARKDOWN", "CBPASTE_EXPORT_FORMATTING_HTML", "CBPASTE_EXPORT_FORMATTING_BBCODE" ]

[node name="Label3" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="4"]
margin_top = 152.0
margin_right = 438.0
margin_bottom = 212.0
hint_tooltip = "CBPASTE_EXPORT_HINT_ATTRIBUTES"
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CBPASTE_EXPORT_ATTRIBUTES"
align = 2
script = ExtResource( 6 )

[node name="IncludeAttributesInput" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="5" instance=ExtResource( 5 )]
margin_left = 454.0
margin_top = 152.0
margin_right = 586.0
margin_bottom = 212.0
hint_tooltip = "CBPASTE_EXPORT_HINT_NICKNAMES"
values = [ true, false ]
value_labels = [ "UI_BUTTON_YES", "UI_BUTTON_NO" ]

[node name="Label4" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="6"]
margin_top = 228.0
margin_right = 438.0
margin_bottom = 288.0
hint_tooltip = "CBPASTE_EXPORT_HINT_NICKNAMES"
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CBPASTE_EXPORT_NICKNAMES"
align = 2
script = ExtResource( 6 )

[node name="IncludeNicknamesInput" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="7" instance=ExtResource( 5 )]
margin_left = 454.0
margin_top = 228.0
margin_right = 586.0
margin_bottom = 288.0
hint_tooltip = "CBPASTE_EXPORT_HINT_NICKNAMES"
values = [ true, false ]
value_labels = [ "UI_BUTTON_YES", "UI_BUTTON_NO" ]

[node name="Label5" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="8"]
margin_top = 304.0
margin_right = 438.0
margin_bottom = 364.0
hint_tooltip = "CBPASTE_EXPORT_HINT_GRADE"
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CBPASTE_EXPORT_GRADE"
align = 2
script = ExtResource( 6 )

[node name="IncludeGradeInput" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="9" instance=ExtResource( 5 )]
margin_left = 454.0
margin_top = 304.0
margin_right = 586.0
margin_bottom = 364.0
hint_tooltip = "CBPASTE_EXPORT_HINT_GRADE"
values = [ true, false ]
value_labels = [ "UI_BUTTON_YES", "UI_BUTTON_NO" ]

[node name="Label6" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="10"]
margin_top = 380.0
margin_right = 438.0
margin_bottom = 440.0
hint_tooltip = "CBPASTE_EXPORT_HINT_SKIP_EMPTY"
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CBPASTE_EXPORT_SKIP_EMPTY"
align = 2
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="SkipEmptyInput" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/InputContainer" index="11" instance=ExtResource( 5 )]
margin_left = 454.0
margin_top = 380.0
margin_right = 586.0
margin_bottom = 440.0
hint_tooltip = "CBPASTE_EXPORT_HINT_SKIP_EMPTY"
__meta__ = {
"_editor_description_": ""
}
values = [ true, false ]
value_labels = [ "UI_BUTTON_YES", "UI_BUTTON_NO" ]

[node name="HintLabel" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer" index="1"]
margin_top = 472.0
margin_right = 586.0
margin_bottom = 682.0
rect_min_size = Vector2( 0, 210 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
autowrap = true

[node name="BackButtonPanel" parent="." index="3" instance=ExtResource( 10 )]
back_text_override = "UI_BUTTON_CANCEL"

[node name="HBoxContainer" parent="BackButtonPanel" index="0"]
margin_right = 751.0

[node name="AcceptButton" type="Button" parent="BackButtonPanel/HBoxContainer" index="0"]
margin_right = 359.0
margin_bottom = 52.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "CBPASTE_EXPORT_ACCEPT"
expand_icon = true
script = ExtResource( 11 )
action = "ui_action_2"

[node name="BackButton" parent="BackButtonPanel/HBoxContainer" index="1"]
margin_left = 423.0
margin_right = 667.0
focus_mode = 2
detect_action = true

[node name="Tween" type="Tween" parent="." index="4"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 12 )
bus = "SoundEffects"

[connection signal="pressed" from="BackButtonPanel/HBoxContainer/AcceptButton" to="." method="_on_AcceptButton_pressed"]

[editable path="BackButtonPanel"]
